@@ -6,11 +6,11 @@
 
     <groupId>com.epam.jdi</groupId>
     <artifactId>jdi-light-bootstrap-tests</artifactId>
-    <version>1.4.11</version>
+    <version>1.4.12-SNAPSHOT</version>
     <name>Tests: JDI Bootstrap</name>
 
     <properties>
-        <jdi.version>1.4.11</jdi.version>
+        <jdi.version>1.4.12-SNAPSHOT</jdi.version>
         <driver>chrome</driver>
         <!--driver>firefox</driver-->
         <allure.maven>2.10.0</allure.maven>
@@ -20,6 +20,18 @@
         <!-- - - add-opens java.base/java.lang=ALL-UNNAMED is needed for JDK 16+ -->
         <aspectj.args></aspectj.args>
     </properties>
+
+    <profiles>
+        <profile>
+            <id>jdk16</id>
+            <activation>
+                <jdk>[16, 20]</jdk>
+            </activation>
+            <properties>
+                <aspectj.args>--add-opens java.base/java.lang=ALL-UNNAMED</aspectj.args>
+            </properties>
+        </profile>
+    </profiles>
 
     <dependencies>
         <!--JDI-->
